Updating to process feeds that have no title but a description, and handle HTML descriptions